--- a/css/main.css
+++ b/css/main.css
@@ -1,32 +1,37 @@
+body {
+  position: relative; }
+
 .sidebar.affix {
-  position: static; }
+  position: static;
+  overflow: hidden; }
 
 @media (min-width: 768px) {
   .sidebar {
     padding-left: 20px; } }
+
 /* First level of nav */
 .sidenav {
   margin-top: 20px;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  overflow: hidden; }
 
 /* All levels of nav */
+.sidebar .nav li > a:hover, .sidebar .nav li > a:focus, .sidebar .nav li.active > a, .sidebar .nav li.active > a:active, .sidebar .nav li.active > a:hover, .sidebar .nav li.active > a:focus {
+  padding-left: 19px;
+  color: #563d7c;
+  text-decoration: none;
+  background-color: transparent;
+  border-left: 1px solid #563d7c; }
+
 .sidebar .nav li > a {
   display: block;
   padding: 4px 20px;
-  font-size: 13px;
+  font-size: 16px;
   font-weight: 500;
   color: #999999; }
-  .sidebar .nav li > a:hover, .sidebar .nav li > a:focus {
-    padding-left: 19px;
-    color: #563d7c;
-    text-decoration: none;
-    background-color: transparent;
-    border-left: 1px solid #563d7c; }
-  .sidebar .nav li > a .active > a, .sidebar .nav li > a .active:hover > a, .sidebar .nav li > a .active:focus > a {
-    padding-left: 18px;
-    font-weight: bold;
-    color: #563d7c;
-    background-color: transparent;
+.sidebar .nav li.active > a {
+  border-left: 2px solid #563d7c; }
+  .sidebar .nav li.active > a:active, .sidebar .nav li.active > a:hover, .sidebar .nav li.active > a:focus {
     border-left: 2px solid #563d7c; }
 .sidebar .nav .nav {
   display: none;
@@ -36,7 +41,7 @@
     padding-top: 1px;
     padding-bottom: 1px;
     padding-left: 30px;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: normal; }
     .sidebar .nav .nav li > a:hover, .sidebar .nav .nav li > a:focus {
       padding-left: 29px; }
@@ -62,7 +67,6 @@
 @media (min-width: 768px) {
   .back-to-top, .theme-toggle {
     display: block; } }
-/* Show and affix the side nav when space allows it */
 @media (min-width: 992px) {
   .sidebar .nav > .active > ul {
     display: block; }
@@ -72,8 +76,7 @@
     position: fixed;
     /* Undo the static from mobile first approach */
     top: 20px;
-    bottom: 20px;
-    overflow-y: auto; }
+    bottom: 20px; }
   .sidebar.affix-bottom {
     position: absolute;
     /* Undo the static from mobile first approach */ }
@@ -83,8 +86,6 @@
   .sidebar.affix .sidenav {
     margin-top: 0;
     margin-bottom: 0; } }
-/* Widen the fixed sidebar */
 @media (min-width: 1200px) {
-  /* Widen the fixed sidebar again */
   .sidebar.affix-bottom, .sidebar.affix {
     width: 263px; } }
