--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,10 @@
+@import "bootstrap/mixins";
+
 * {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	font-family: sans-serif;
 }
 body {
 	color: #333;
@@ -10,6 +13,10 @@ h2, h3, h4, h5 {
 	font-family: "proxima-nova-sc-osf-condensed", sans-serif;
 	font-size: 2em;
 	font-weight: 700;
+}
+a {
+	color: #105779;
+	text-decoration: none;
 }
 ul {
 	list-style-position: inside;
@@ -36,4 +43,95 @@ ul {
 
 .container {
 	padding: 2em;
+}
+
+
+.petition {
+	margin: 1em auto;
+	padding: 2em;
+	border: 1px solid #ddd;
+	background-color: #eee;
+
+	h3 {
+		margin-bottom: 1em;
+		font: italic normal 1.5em serif;
+		text-align: center;
+	}
+
+	div {
+		margin-bottom: 1em;
+		text-align: center;
+	}
+
+	.btn-affirm {
+		display: inline-block;
+		margin-bottom: 0.25em;
+		width: 100%;
+		padding: 0.25em 0.75em;
+		border: 3px solid #444;
+		background-color: white;
+		font: 2em "proxima-nova-sc-osf-condensed", sans-serif;
+		text-decoration: none;
+		text-transform: uppercase;
+		color: #105779;
+
+		&:hover {
+			background-color: #105779;
+			color: white;
+		}
+	}
+
+	a:last-of-type {
+		display: block;
+		font-size: .875em;
+	}
+
+	.form-petition {
+		display: none;
+	}
+
+	input {
+		width: 100%;
+		padding: 0.5em;
+		border: 1px solid #105779;
+		font: 1.25em/1.5em serif;
+
+		&:first-of-type {
+			border-bottom: 0;
+		}
+	}
+
+	button {
+		width: 100%;
+		padding: 0.25em;
+		border: 1px solid #105779;
+		background-color: #105779;
+		font: 1.25em/2em "proxima-nova-sc-osf-condensed", sans-serif;
+		color: white;
+		text-align: center;
+		vertical-align: top;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.petition {
+		width: 70%;
+
+		.btn-affirm {
+			width: 40%;
+		}
+
+		input {
+			width: 40%;
+
+			&:first-of-type {
+				border-bottom: 1px solid #105779;
+				border-right: 0;
+			}
+		}
+
+		button {
+			width: 20%;
+		}
+	}
 }
