--- a/css/style.scss
+++ b/css/style.scss
@@ -121,16 +121,22 @@ li {
 @media screen and (min-width: 768px) {
 	.petition {
 		input {
-			width: 40%;
+			float: left;
+			width: 50%;
 
-			&:first-of-type {
+			&:nth-of-type(odd) {
 				border-bottom: 1px solid #105779;
 				border-right: 0;
+			}
+
+			&:nth-of-type(1),
+			&:nth-of-type(2) {
+				border-bottom: 0;
 			}
 		}
 
 		button {
-			width: 20%;
+			width: 100%;
 		}
 	}
 	.petition-yes {
