--- a/css/_style.scss
+++ b/css/_style.scss
@@ -11,8 +11,9 @@ body {
 }
 h1, h2, h3, h4, h5,
 h1 a, h2 a, h3 a, h4 a, h5 a {
-	font-family: "proxima-nova-sc-osf-condensed", sans-serif;
-//	font-size: 2em;
+	font-family: "proxima-nova-sc-osf-condensed", Helvetica, Arial, sans-serif;
+    color: $cfa-pink;
+    //font-size: 2em;
 	font-weight: 700;
 }
 
