--- a/css/main.css
+++ b/css/main.css
@@ -5300,7 +5300,8 @@ body {
 
 h1, h2, h3, h4, h5,
 h1 a, h2 a, h3 a, h4 a, h5 a {
-  font-family: "proxima-nova-sc-osf-condensed", sans-serif;
+  font-family: "proxima-nova-sc-osf-condensed", Helvetica, Arial, sans-serif;
+  color: #cf1b41;
   font-weight: 700; }
 
 a {
@@ -5388,8 +5389,17 @@ body {
   font-size: 16px; }
 
 .cover {
-  background: #cf1b41 no-repeat center center;
+  background: #399fd3 no-repeat center center;
+  background: #cf1b41;
+  background: -moz-linear-gradient(-45deg, #cf1b41 0%, #399fd3 100%);
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #cf1b41), color-stop(100%, #399fd3));
+  background: -webkit-linear-gradient(-45deg, #cf1b41 0%, #399fd3 100%);
+  background: -o-linear-gradient(-45deg, #cf1b41 0%, #399fd3 100%);
+  background: -ms-linear-gradient(-45deg, #cf1b41 0%, #399fd3 100%);
+  background: linear-gradient(135deg, #cf1b41 0%, #399fd3 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cf1b41', endColorstr='#399fd3',GradientType=1 );
   background-size: cover;
+  box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.2), inset 0 -3px 7px rgba(0, 0, 0, 0.2);
   height: 80vh;
   margin-top: -20px;
   text-align: center; }
@@ -5402,7 +5412,17 @@ body {
   .cover .cover-content {
     display: inline-block;
     vertical-align: middle;
-    width: 300px; }
+    width: 30em; }
+    .cover .cover-content .miami {
+      display: inline-block;
+      color: #399fd3; }
+      .cover .cover-content .miami::first-letter {
+        font-size: 2em; }
+    .cover .cover-content .opendata {
+      display: inline-block;
+      color: #cf1b41; }
+      .cover .cover-content .opendata::first-letter {
+        font-size: 2em; }
 
 .navbar {
   min-height: 4em; }
@@ -5517,3 +5537,9 @@ body {
 @media (min-width: 1200px) {
   .sidebar.affix-bottom, .sidebar.affix {
     width: 263px; } }
+
+.pink {
+  color: #cf1b41; }
+
+.blue {
+  color: #399fd3; }
