--- a/css/main.css
+++ b/css/main.css
@@ -5289,6 +5289,95 @@ button.close {
 @media print {
   .hidden-print {
     display: none !important; } }
+.sidebar.affix {
+  position: static;
+  overflow: hidden; }
+
+@media (min-width: 768px) {
+  .sidebar {
+    padding-left: 20px; } }
+
+/* First level of nav */
+.sidenav {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  overflow: hidden; }
+
+/* All levels of nav */
+.sidebar .nav li > a:hover, .sidebar .nav li > a:focus, .sidebar .nav li.active > a, .sidebar .nav li.active > a:active, .sidebar .nav li.active > a:hover, .sidebar .nav li.active > a:focus {
+  padding-left: 19px;
+  color: #cf1b41;
+  font-weight: bold;
+  text-decoration: none;
+  background-color: transparent;
+  border-left: 1px solid #cf1b41; }
+
+.sidebar .nav li > a {
+  display: block;
+  padding: 4px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #399fd3; }
+.sidebar .nav li.active > a {
+  border-left: 2px solid #cf1b41; }
+  .sidebar .nav li.active > a:active, .sidebar .nav li.active > a:hover, .sidebar .nav li.active > a:focus {
+    border-left: 2px solid #cf1b41; }
+.sidebar .nav .nav {
+  display: none;
+  /* Hide by default, but at >768px, show it */
+  padding-bottom: 10px; }
+  .sidebar .nav .nav li > a {
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 30px;
+    font-size: 16px;
+    font-weight: Normal; }
+    .sidebar .nav .nav li > a:hover, .sidebar .nav .nav li > a:focus {
+      padding-left: 29px; }
+    .sidebar .nav .nav li > a .active > a, .sidebar .nav .nav li > a .active:hover > a, .sidebar .nav .nav li > a .active:focus > a {
+      padding-left: 28px;
+      font-weight: 500; }
+
+/* Nav: second level (shown on .active) */
+/* Back to top (hidden on mobile) */
+.back-to-top {
+  display: none;
+  padding: 4px 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  font-size: 12px;
+  font-weight: 500;
+  color: #999999; }
+  @media (min-width: 768px) {
+    .back-to-top {
+      display: block; } }
+  .back-to-top:hover {
+    color: #563d7c;
+    text-decoration: none; }
+
+@media (min-width: 992px) {
+  .sidebar .nav > .active > ul {
+    display: block; }
+  .sidebar.affix, .sidebar.affix-bottom {
+    width: 213px; }
+  .sidebar.affix {
+    position: fixed;
+    /* Undo the static from mobile first approach */
+    top: 20px;
+    bottom: 20px; }
+  .sidebar.affix-bottom {
+    position: absolute;
+    /* Undo the static from mobile first approach */ }
+    .sidebar.affix-bottom .sidenav {
+      margin-top: 0;
+      margin-bottom: 0; }
+  .sidebar.affix .sidenav {
+    margin-top: 0;
+    margin-bottom: 0; } }
+@media (min-width: 1200px) {
+  .sidebar.affix-bottom, .sidebar.affix {
+    width: 263px; } }
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5390,14 +5479,10 @@ body {
 
 .cover {
   background: #399fd3 no-repeat center center;
-  background: #cf1b41;
-  background: -moz-linear-gradient(-45deg, #cf1b41 0%, #399fd3 100%);
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #cf1b41), color-stop(100%, #399fd3));
-  background: -webkit-linear-gradient(-45deg, #cf1b41 0%, #399fd3 100%);
-  background: -o-linear-gradient(-45deg, #cf1b41 0%, #399fd3 100%);
-  background: -ms-linear-gradient(-45deg, #cf1b41 0%, #399fd3 100%);
-  background: linear-gradient(135deg, #cf1b41 0%, #399fd3 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cf1b41', endColorstr='#399fd3',GradientType=1 );
+  background-repeat: repeat-x;
+  background-image: -webkit-linear-gradient(-45deg, #399fd3 0%, #cf1b41 100%);
+  background-image: -o-linear-gradient(-45deg, #399fd3 0%, #cf1b41 100%);
+  background-image: linear-gradient(-45deg, #399fd3 0%, #cf1b41 100%);
   background-size: cover;
   box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.2), inset 0 -3px 7px rgba(0, 0, 0, 0.2);
   height: 80vh;
@@ -5449,97 +5534,8 @@ body {
     padding-top: 2em;
     padding-bottom: 2em; }
 
-.sidebar.affix {
-  position: static;
-  overflow: hidden; }
-
-@media (min-width: 768px) {
-  .sidebar {
-    padding-left: 20px; } }
-
-/* First level of nav */
-.sidenav {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  overflow: hidden; }
-
-/* All levels of nav */
-.sidebar .nav li > a:hover, .sidebar .nav li > a:focus, .sidebar .nav li.active > a, .sidebar .nav li.active > a:active, .sidebar .nav li.active > a:hover, .sidebar .nav li.active > a:focus {
-  padding-left: 19px;
-  color: #cf1b41;
-  font-weight: bold;
-  text-decoration: none;
-  background-color: transparent;
-  border-left: 1px solid #cf1b41; }
-
-.sidebar .nav li > a {
-  display: block;
-  padding: 4px 20px;
-  font-size: 16px;
-  font-weight: bold;
-  color: #399fd3; }
-.sidebar .nav li.active > a {
-  border-left: 2px solid #cf1b41; }
-  .sidebar .nav li.active > a:active, .sidebar .nav li.active > a:hover, .sidebar .nav li.active > a:focus {
-    border-left: 2px solid #cf1b41; }
-.sidebar .nav .nav {
-  display: none;
-  /* Hide by default, but at >768px, show it */
-  padding-bottom: 10px; }
-  .sidebar .nav .nav li > a {
-    padding-top: 1px;
-    padding-bottom: 1px;
-    padding-left: 30px;
-    font-size: 16px;
-    font-weight: Normal; }
-    .sidebar .nav .nav li > a:hover, .sidebar .nav .nav li > a:focus {
-      padding-left: 29px; }
-    .sidebar .nav .nav li > a .active > a, .sidebar .nav .nav li > a .active:hover > a, .sidebar .nav .nav li > a .active:focus > a {
-      padding-left: 28px;
-      font-weight: 500; }
-
-/* Nav: second level (shown on .active) */
-/* Back to top (hidden on mobile) */
-.back-to-top {
-  display: none;
-  padding: 4px 10px;
-  margin-top: 10px;
-  margin-left: 10px;
-  font-size: 12px;
-  font-weight: 500;
-  color: #999999; }
-  @media (min-width: 768px) {
-    .back-to-top {
-      display: block; } }
-  .back-to-top:hover {
-    color: #563d7c;
-    text-decoration: none; }
-
-@media (min-width: 992px) {
-  .sidebar .nav > .active > ul {
-    display: block; }
-  .sidebar.affix, .sidebar.affix-bottom {
-    width: 213px; }
-  .sidebar.affix {
-    position: fixed;
-    /* Undo the static from mobile first approach */
-    top: 20px;
-    bottom: 20px; }
-  .sidebar.affix-bottom {
-    position: absolute;
-    /* Undo the static from mobile first approach */ }
-    .sidebar.affix-bottom .sidenav {
-      margin-top: 0;
-      margin-bottom: 0; }
-  .sidebar.affix .sidenav {
-    margin-top: 0;
-    margin-bottom: 0; } }
-@media (min-width: 1200px) {
-  .sidebar.affix-bottom, .sidebar.affix {
-    width: 263px; } }
-
 .pink {
-  color: #cf1b41; }
+  color: #cf1b41 !important; }
 
 .blue {
-  color: #399fd3; }
+  color: #399fd3 !important; }
