--- a/css/main.sass
+++ b/css/main.sass
@@ -2,6 +2,7 @@ $cfa-blue: #399fd3
 $cfa-pink: #cf1b41
 
 @import "bootstrap"
+@import "sidebar"
 @import "style"
 
 body
@@ -10,14 +11,15 @@ body
 
 .cover
   background: $cfa-blue no-repeat center center
-  background: #cf1b41 /* Old browsers */
-  background: -moz-linear-gradient(-45deg,  #cf1b41 0%, #399fd3 100%) /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#cf1b41), color-stop(100%,#399fd3)) /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(-45deg,  #cf1b41 0%,#399fd3 100%) /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(-45deg,  #cf1b41 0%,#399fd3 100%) /* Opera 11.10+ */
-  background: -ms-linear-gradient(-45deg,  #cf1b41 0%,#399fd3 100%) /* IE10+ */
-  background: linear-gradient(135deg,  #cf1b41 0%,#399fd3 100%) /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cf1b41', endColorstr='#399fd3',GradientType=1 ) /* IE6-9 fallback on horizontal gradient */
+  @include gradient-directional(#399fd3 0%, #cf1b41 100%, -45deg)
+  //background: #cf1b41 /* Old browsers */
+  //background: -moz-linear-gradient(-45deg,  #cf1b41 0%, #399fd3 100%) /* FF3.6+ */
+  //background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#cf1b41), color-stop(100%,#399fd3)) /* Chrome,Safari4+ */
+  //background: -webkit-linear-gradient(-45deg,  #cf1b41 0%,#399fd3 100%) /* Chrome10+,Safari5.1+ */
+  //background: -o-linear-gradient(-45deg,  #cf1b41 0%,#399fd3 100%) /* Opera 11.10+ */
+  //background: -ms-linear-gradient(-45deg,  #cf1b41 0%,#399fd3 100%) /* IE10+ */
+  //background: linear-gradient(135deg,  #cf1b41 0%,#399fd3 100%) /* W3C */
+  //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cf1b41', endColorstr='#399fd3',GradientType=1 ) /* IE6-9 fallback on horizontal gradient */
   background-size: cover
 
   box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2)
@@ -80,117 +82,13 @@ body
 
 
 
-// Sidebar Stuff
-.sidebar.affix
-  position: static
-  overflow: hidden
+//buttons
 
-.sidebar
-  @media (min-width: 768px)
-    padding-left: 20px
-
-/* First level of nav
-
-.sidenav
-  margin-top: 20px
-  margin-bottom: 20px
-  overflow: hidden
-
-
-/* All levels of nav
-
-%sidebar-active
-  padding-left: 19px
-  color: $cfa-pink
-  font-weight: bold
-  text-decoration: none
-  background-color: transparent
-  border-left: 1px solid $cfa-pink
-
-
-.sidebar .nav
-  li
-    > a
-      display: block
-      padding: 4px 20px
-      font-size: 16px
-      font-weight: bold
-      color: $cfa-blue
-      &:hover, &:focus
-        @extend %sidebar-active
-    &.active
-      > a
-        @extend %sidebar-active
-        border-left: 2px solid $cfa-pink
-        &:active, &:hover, &:focus
-          @extend %sidebar-active
-          border-left: 2px solid $cfa-pink
-
-  .nav
-    display: none
-    /* Hide by default, but at >768px, show it
-    padding-bottom: 10px
-    >
-    li > a
-      padding-top: 1px
-      padding-bottom: 1px
-      padding-left: 30px
-      font-size: 16px
-      font-weight: Normal
-      &:hover, &:focus
-        padding-left: 29px
-      .active
-        > a, &:hover > a, &:focus > a
-          padding-left: 28px
-          font-weight: 500
-
-/* Nav: second level (shown on .active)
-
-/* Back to top (hidden on mobile)
-
-.back-to-top
-  display: none
-  @media (min-width: 768px)
-    display: block
-  padding: 4px 10px
-  margin-top: 10px
-  margin-left: 10px
-  font-size: 12px
-  font-weight: 500
-  color: #999
-  &:hover
-    color: #563d7c
-    text-decoration: none
-
-// Show and affix the side nav when space allows it
-.sidebar
-  @media (min-width: 992px)
-    .nav > .active > ul
-      display: block
-    &.affix, &.affix-bottom
-      width: 213px
-    &.affix
-      position: fixed
-      /* Undo the static from mobile first approach
-      top: 20px
-      bottom: 20px
-    &.affix-bottom
-      position: absolute
-      /* Undo the static from mobile first approach
-      .sidenav
-        margin-top: 0
-        margin-bottom: 0
-    &.affix .sidenav
-      margin-top: 0
-      margin-bottom: 0
-  @media (min-width: 1200px)
-    &.affix-bottom, &.affix
-      width: 263px
 
 
 // Utilities
 
 .pink
-  color: $cfa-pink
+  color: $cfa-pink !important
 .blue
-  color: $cfa-blue
+  color: $cfa-blue !important
