--- a/css/main.sass
+++ b/css/main.sass
@@ -12,16 +12,7 @@ body
 .cover
   background: $cfa-blue no-repeat center center
   @include gradient-directional(#399fd3 0%, #cf1b41 100%, -45deg)
-  //background: #cf1b41 /* Old browsers */
-  //background: -moz-linear-gradient(-45deg,  #cf1b41 0%, #399fd3 100%) /* FF3.6+ */
-  //background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#cf1b41), color-stop(100%,#399fd3)) /* Chrome,Safari4+ */
-  //background: -webkit-linear-gradient(-45deg,  #cf1b41 0%,#399fd3 100%) /* Chrome10+,Safari5.1+ */
-  //background: -o-linear-gradient(-45deg,  #cf1b41 0%,#399fd3 100%) /* Opera 11.10+ */
-  //background: -ms-linear-gradient(-45deg,  #cf1b41 0%,#399fd3 100%) /* IE10+ */
-  //background: linear-gradient(135deg,  #cf1b41 0%,#399fd3 100%) /* W3C */
-  //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cf1b41', endColorstr='#399fd3',GradientType=1 ) /* IE6-9 fallback on horizontal gradient */
   background-size: cover
-
   box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2)
 
   height: 80vh
@@ -80,9 +71,16 @@ body
         padding-top: 2em
         padding-bottom: 2em
 
-
-
 //buttons
+
+
+
+.btn-odp-blue
+  @extend .btn-default
+  background: none
+
+.btn-xl
+  @include button-size(2em, 2.25em, $font-size-large, $line-height-large, $border-radius-large)
 
 
 
