--- a/css/main.sass
+++ b/css/main.sass
@@ -9,7 +9,7 @@ body
   font-size: 16px
 
 .cover
-  background: $cfa-pink no-repeat center center
+  background: url(../images/miami.jpg) no-repeat center center $cfa-pink
   background-size: cover
   height: 80vh
   margin-top: -20px
