--- a/css/main.sass
+++ b/css/main.sass
@@ -20,10 +20,14 @@ body
     height: 100%
     vertical-align: middle
     margin-right: -0.25em
-  .cover-content
-    display: inline-block
-    vertical-align: middle
-    width: 300px
+
+.cover-content
+  display: inline-block
+  vertical-align: middle
+  h1
+    color: white
+    font-size: 5em
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.8)
 
 // Nav bar
 
