--- a/css/_style.scss
+++ b/css/_style.scss
@@ -16,6 +16,10 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
 	font-weight: 700;
 }
 
+h4 {
+	margin-top: 1.5em;
+}
+
 a {
 	color: $cfa-pink;
 	text-decoration: none;
@@ -30,23 +34,22 @@ li {
 	}
 }
 
-.hero {
-	background: url(../images/miami.jpg) no-repeat 0 0;
-	background-size: cover;
-	width: 100%;
-	height: 80vh;
+.btn,
+.btn-lg {
+	border-radius: 0;
 }
-// .hero-title {
-// 	position: relative;
-// 	top: 50%;
-// 	transform: translateY(-50%);
-// 	margin-top: 0;
-// 	font-size: 5em;
-// 	font-weight: 800;
-// 	color: white;
-// 	text-align: center;
-// 	text-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
-// }
+
+.cover {
+	.btn {
+		background: rgba(0, 0, 0, 0.5);
+		border: 3px solid white;
+	}
+}
+
+.brand-second {
+	font-family: "proxima-nova-sc-osf-condensed", sans-serif;
+	color: #cf1b41;
+}
 
 .container {
 	padding: 2em;
@@ -121,16 +124,22 @@ li {
 @media screen and (min-width: 768px) {
 	.petition {
 		input {
-			width: 40%;
+			float: left;
+			width: 50%;
 
-			&:first-of-type {
+			&:nth-of-type(odd) {
 				border-bottom: 1px solid #105779;
 				border-right: 0;
+			}
+
+			&:nth-of-type(1),
+			&:nth-of-type(2) {
+				border-bottom: 0;
 			}
 		}
 
 		button {
-			width: 20%;
+			width: 100%;
 		}
 	}
 	.petition-yes {
