--- a/css/main.sass
+++ b/css/main.sass
@@ -51,9 +51,8 @@ body
   text-transform: uppercase
   box-sizing: content-box
   padding-top: 2em
-  height: none
-
-
+  margin-left: 0px !important
+  height: 0
 
 .navbar-odp
   @extend .navbar-default
@@ -72,8 +71,6 @@ body
         padding-bottom: 2em
 
 //buttons
-
-
 
 .btn-odp-blue
   @include button-variant(white, transparentize($cfa-blue, 0.75), $cfa-blue)
