--- a/css/main.sass
+++ b/css/main.sass
@@ -27,7 +27,7 @@ body
   .cover-content
     display: inline-block
     vertical-align: middle
-    width: 30em
+    width: 24em
     .miami
       display: inline-block
       color: $cfa-blue
@@ -38,6 +38,8 @@ body
       color: $cfa-pink
       &::first-letter
         font-size: 2em
+    .lead
+      color: white
 
 // Nav bar
 
