Rm margin on petition h3

--- a/css/_style.scss
+++ b/css/_style.scss
@@ -63,6 +63,7 @@ li {
 	background-color: #eee;
 
 	h3 {
+		margin-top: 0;
 		margin-bottom: 1em;
 		font: italic normal 1.5em serif;
 		text-align: center;
