--- a/css/main.sass
+++ b/css/main.sass
@@ -10,7 +10,7 @@ body
   font-size: 16px
 
 .cover
-  background: url(../images/miami.jpg) no-repeat center center $cfa-pink
+  background: url(../images/miami.jpg) no-repeat center center $cfa-blue
   background-size: cover
   box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2)
   height: 80vh
