--- a/css/main.sass
+++ b/css/main.sass
@@ -14,42 +14,23 @@ body
   background: url(../images/miami.jpg) no-repeat center center $cfa-blue
   background-size: cover
   box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2)
-  height: 60vh
-  margin-top: -20px
+  height: 100vh
+  padding: 0 1em
   text-align: center
 
 .cover-content
   position: relative
-  top: 50%
+  top: 1.5em
   display: inline-block
   vertical-align: middle
-  transform: translateY(-50%)
   h1
     color: white
-    font-size: 5em
+    font-size: 3em
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.8)
   .lead
     color: white
 
 //buttons
-
-.btn-odp-blue
-  @include button-variant(white, transparentize($cfa-blue, 0.75), $cfa-blue)
-  //@include button-variant($btn-default-color, $btn-default-bg, $btn-default-border)
-  color: white
-  border: 0.35rem solid $cfa-blue
-  &:hover, &:focus, &:active
-    color: white
-    background: $cfa-blue
-    border: 0.35rem solid $cfa-blue
-.btn-odp-pink
-  @include button-variant(white, transparentize($cfa-pink, 0.75), $cfa-pink)
-  //@include button-variant($btn-default-color, $btn-default-bg, $btn-default-border)
-  border: 0.35rem solid $cfa-pink
-  &:hover, &:focus, &:active
-    color: white
-    background: $cfa-pink
-    border: 0.35rem solid $cfa-pink
 
 .btn-xl
   $padding-x-large-vertical: 16px
@@ -69,3 +50,8 @@ body
 @media screen and (min-width: 768px)
   .cover
     height: 80vh
+  .cover-content
+    top: 50%
+    transform: translateY(-50%)
+    h1
+      font-size: 5em
