recreated footer css fixes #10

--- a/css/main.sass
+++ b/css/main.sass
@@ -30,6 +30,29 @@ body
   .lead
     color: white
 
+// footer
+
+.footer
+  padding-top: 40px
+  padding-bottom: 40px
+  margin-top: 100px
+  color: #777
+  text-align: center
+  border-top: 1px solid #e5e5e5
+  //height: 10vh
+  &:before
+    content: ''
+    display: inline-block
+    height: 100%
+    vertical-align: middle
+    margin-right: -0.25em
+  .cover-content
+    display: inline-block
+    vertical-align: middle
+    width: 24em
+
+
+
 //buttons
 
 .btn-xl
