--- a/css/_sidebar.sass
+++ b/css/_sidebar.sass
@@ -3,6 +3,9 @@
   position: static
   overflow: hidden
 
+.affix-bottom
+  position: relative
+
 .sidebar
   @media (min-width: 768px)
     padding-left: 20px
