fixed breaking comment on main.sass

--- a/css/main.css
+++ b/css/main.css
@@ -5292,6 +5292,9 @@ button.close {
   position: static;
   overflow: hidden; }
 
+.affix-bottom {
+  position: relative; }
+
 @media (min-width: 768px) {
   .sidebar {
     padding-left: 20px; } }
