--- a/css/main.sass
+++ b/css/main.sass
@@ -6,7 +6,7 @@ $cfa-pink: #cf1b41
 @import "style"
 
 body
-  position: relative /* For scrollspy */
+  position: relative // For scrollspy
   font-size: 16px
 
 .cover
