--- a/css/_style.scss
+++ b/css/_style.scss
@@ -87,6 +87,11 @@ h2 + section {
 	margin-top: 20px;
 }
 
+#petition-confirmation,
+.fb_reset {
+	display: none;
+}
+
 .petition {
 	margin: 4rem auto 1rem;
 	padding: 2em;
@@ -156,6 +161,13 @@ h2 + section {
 	display: block;
 	margin: 0.5em 1em;
 	font-size: 85%;
+}
+
+.twitter-share-button,
+.fb-share-button {
+	display: inline-block;
+	line-height: 0;
+	vertical-align: top;
 }
 
 @media screen and (min-width: 768px) {
